# TeamGroove

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  TeamGrooveDB.txt  add_track_id_to_playlist.py  create_tg_playlist.py  env.example  github-dump.json  log_in.py  main.py  manage.py  playlist_db.py  playlist_search.py  pyproject.toml  queue_tracks.py  search_track_name_on_spotify.py  spotify_api_test.py  spotify_authorization_code_flow.py  spotify_client_credentials_flow.py
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
TeamGroove2/: cert.key  local.yml  manage.py
TeamGroove2/certs/: cert.crt
TeamGroove2/config/: urls.py  wsgi.py
TeamGroove2/requirements/: base.txt  local.txt
album_list/: apps.py  urls.py  views.py
cli_api/: apps.py  serializers.py
core/: tests.py  views.py
cuser/: admin.py  apps.py  forms.py  managers.py  models.py  validators.py
cuser/migrations/: 0001_initial.py
grooveboard/: apps.py  tests.py  views.py
image_search/: forms.py  views.py
playlist/: apps.py  models.py  urls.py
playlist/migrations/: 0001_initial.py  0002_auto_20220511_2140.py  0003_auto_20220525_2005.py
rest_logon/: apps.py  serializers.py  views.py
room/: admin.py  apps.py  context_processors.py  email_utils.py  forms.py  models.py  tests.py  views.py
room/migrations/: 0001_initial.py  0002_invitation.py  0002_rename_code_invitation_invitation_code.py
spotify/: apps.py  forms.py  models.py  tests.py  utils.py  views.py
spotify/migrations/: 0001_initial.py  0002_track_track_artist.py  0003_delete_vote.py  0004_auto_20220511_2113.py
team_groove/: .env.example  asgi.py  urls.py  wsgi.py
team_groove/settings/: base.py  development.py  production.py
team_groove/templates/: accept_invitation.html  (+23 more)
users/: admin.py  managers.py  models.py  tests.py  validators.py  views.py
vote/: admin.py  models.py  tests.py  utils.py  views.py
(+43 files in other folders)
