[tool.poetry]
name = "teamgroove"
version = "0.1.0"
description = "Team Groove from PyLAB"
authors = ["stiffneckjim <22213990+stiffneckjim@users.noreply.github.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.5"
python-dotenv = "^0.15.0"
requests = "^2.25.1"
spotipy = "^2.16.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
