[tool.poetry]
name = "teamgroove"
version = "0.1.0"
description = "Team Groove from PyLAB"
authors = ["stiffneckjim <22213990+stiffneckjim@users.noreply.github.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
spotipy = "^2.18"
Django = "3.2.25"
django-environ = "^0.4.5"
unittest-xml-reporting = "^3.0.4"
sqlparse = ">=0.4.2"
setuptools = ">=65.5.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [".env", "env.example"]